--- a/index.html
+++ b/index.html
@@ -3,25 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AhorcadoGame</title>
-    <link rel="shortcut icon" href="./astronaut.png">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <title>Portfolio Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="container-h1-join">
-        <h1>Ahorcado game <br> <span>El mejor juego de Ahorcado</span></h1>
-    <div class="join">
-        <p>Son más de 1000 palabras descúbrelas y divierte en el proceso.</p>
-        <a href="./jugar.html">Jugar</a>
-    </div>
-    </section>
-    <section class="container-images">
-        <div class="item item-1">
-            <h2>Disfruta de más de 1000 palabras para adivinar</h2>
-        </div>
-        <div class="item item-2"></div>
-        <div class="item item-3"></div>
-        <div class="item item-4"></div>
-    </section>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About me</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact me</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="section-one">
+            <div class="section-one-div">
+                <h1>I'm <span>Sebastian Fallas</span></h1>
+                <p>Frond-End Developer</p>
+                <button>Download CV</button>
+            </div>
+        </section>
+        <section class="section-two">
+            <div class="section-two-div">
+                <h2>Who is Sebastián?</h2>
+                <p>A passionate Front End Developer. My mission is to create captivating and functional digital experiences. With a focus on clean design and usability, I transform ideas into attractive and user-friendly websites. Welcome to my digital world!</p>
+            </div>
+            <img src="./images/programacion.png" alt="">
+        </section>
+        <section class="section-three">
+            <h2>My Skills</h2>
+            <div class="section-three-div">
+                <div>
+                    <img src="./images/html-5.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/css-3.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/js.png" alt=""> 
+                </div>
+                <div>
+                    <img src="./images/git.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>My Projects</h2>
+            <div>
+                <a href="https://fallasdev.github.io/">
+                    <img src="./images/ahorcadoGame.png" alt="">
+                </a>
+                <a href="https://github.com/FallasDev/passwordGenerator.github.io">
+                     <img src="./images/generadorContraseñas.png" alt="">
+                </a>
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+        </section>
+        <section>
+            <h3>Contact Me</h3>
+        </section>
+    </main>
 </body>
 </html>
